# simple_server

./: README.md  pyproject.toml
data/: bmi_request_sample.json
src/simple_server/: __init__.py  __main__.py  logger_config.py  models.py
src/simple_server/services/: calculator.py
tests/: conftest.py  test_main.py  test_models.py
tests/test_services/: test_calculator.py
